Major UX improvements: Add source attribution, improve topic filtering, and make sidebar tags functional
- Add source attribution to article bylines (show author + source)
- Implement scalable topic filtering with dropdown for better UX
- Remove irrelevant topics (image, framework, etc.) and prioritize AI-relevant topics
- Make sidebar Popular Tags dynamic and functional with proper filtering
- Enhanced responsive design for topic dropdown
- Improved accessibility with proper ARIA labels and focus states
- Connected sidebar tags to topics page filtering for seamless navigation

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "migrate-blog": "node scripts/migrate-blog-content.js",
+    "create-fallbacks": "node scripts/create-fallback-images.js",
+    "apply-fallbacks": "node scripts/apply-fallback-images.js"
   },
   "repository": {
     "type": "git",
