Remove admin interface and streamline to command-line only approach
- Deleted admin panel UI (pages/admin.js) and all authentication system
- Removed admin-related components: FileUpload, auth, rateLimiter
- Deleted admin API endpoints: article-stats, weekly-update
- Added new blog content folder with documentation for weekly updates
- Created streamlined update-weekly-articles.js script
- Fixed article stats calculation in lib/articles.js
- Updated package.json with new update-articles script
- Eliminates 201kB admin page performance warnings
- Simplified architecture focused on content delivery

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
+    "update-articles": "node scripts/update-weekly-articles.js",
     "migrate-blog": "node scripts/migrate-blog-content.js",
     "create-fallbacks": "node scripts/create-fallback-images.js",
     "apply-fallbacks": "node scripts/apply-fallback-images.js"
