--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint",
     "update-articles": "node scripts/update-weekly-articles.js",
     "migrate-blog": "node scripts/migrate-blog-content.js",
+    "recover-articles": "node scripts/recover-articles.js",
     "create-fallbacks": "node scripts/create-fallback-images.js",
     "apply-fallbacks": "node scripts/apply-fallback-images.js"
   },
